CI: skip dockers until last step

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -134,8 +134,10 @@ pipelines:
             name: build
             script:
               - NODE_OPTIONS=--max_old_space_size=3072 yarn affected --base=HEAD~2 --head=HEAD~1 --target=build --prod --args="--configuration=production"
+              - NODE_OPTIONS=--max_old_space_size=3072 yarn affected --base=HEAD~2 --head=HEAD~1 --target=build-storybook --prod --args="--configuration=production"
+              - NODE_OPTIONS=--max_old_space_size=3072 yarn affected --base=HEAD~2 --head=HEAD~1 --target=export --prod --args="--configuration=production"
             artifacts:
-              - node_modules/.cache/nx/**
+              - node_modules/.cache/**
               - dist/**
 
       - step:
