--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -88,46 +88,46 @@ pipelines:
           artifacts:
             - node_modules/**
 
-      # - parallel:
-      #   - step:
-      #       name: quick
-      #       script:
-      #         # TODO: move these to eslint so that `yarn lint` picks up these errors instead
-      #         - npm i -g typescript
-      #         - tsc --noEmit -p apps/backend/
-      #         - tsc --noEmit -p apps/connect/
-      #         - tsc --noEmit -p apps/connect-e2e/
-      #         - tsc --noEmit -p apps/mgmt/
-      #         - tsc --noEmit -p apps/mgmt-e2e/
-      #         - tsc --noEmit -p apps/ui-e2e/
-      #         - tsc --noEmit -p apps/web/
-      #         - tsc --noEmit -p apps/web-e2e/
-      #         - tsc --noEmit -p libs/ui/tsconfig.lib.json
-      #         - tsc --noEmit -p libs/yup/tsconfig.lib.json
+      - parallel:
+        - step:
+            name: quick
+            script:
+              # TODO: move these to eslint so that `yarn lint` picks up these errors instead
+              - npm i -g typescript
+              - tsc --noEmit -p apps/backend/
+              - tsc --noEmit -p apps/connect/
+              - tsc --noEmit -p apps/connect-e2e/
+              - tsc --noEmit -p apps/mgmt/
+              - tsc --noEmit -p apps/mgmt-e2e/
+              - tsc --noEmit -p apps/ui-e2e/
+              - tsc --noEmit -p apps/web/
+              - tsc --noEmit -p apps/web-e2e/
+              - tsc --noEmit -p libs/ui/tsconfig.lib.json
+              - tsc --noEmit -p libs/yup/tsconfig.lib.json
 
-      #         - touch /tmp/bot_message.txt
+              - touch /tmp/bot_message.txt
 
-      #   - step:
-      #       name: lint
-      #       script:
-      #         - NODE_OPTIONS=--max_old_space_size=3072 yarn affected:lint --base=HEAD~1 --with-deps
+        - step:
+            name: lint
+            script:
+              - NODE_OPTIONS=--max_old_space_size=3072 yarn affected:lint --base=HEAD~1 --with-deps
 
-      #   - step:
-      #       name: unit tests
-      #       script:
-      #         - NODE_OPTIONS=--max_old_space_size=3072 yarn affected:test --base=HEAD~1
+        - step:
+            name: unit tests
+            script:
+              - NODE_OPTIONS=--max_old_space_size=3072 yarn affected:test --base=HEAD~1
 
       - parallel:
 
-        # - step:
-        #     size: 2x
-        #     name: e2e
-        #     caches:
-        #       - cypress
-        #     script:
-        #       - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-        #       - yarn cypress install || true
-        #       - yarn affected:e2e --base=HEAD~1 || true
+        - step:
+            size: 2x
+            name: e2e
+            caches:
+              - cypress
+            script:
+              - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+              - yarn cypress install || true
+              - yarn affected:e2e --base=HEAD~1 || true
 
         - step:
             size: 2x
