CI: test deploying docker

--- a/apps/bridge-api/prisma/.env.SAMPLE
+++ b/apps/bridge-api/prisma/.env.SAMPLE
@@ -1,2 +1,4 @@
+# Remember to run `yarn` after changing this file
+
 DATABASE_URL = mysql://root:123@localhost:3307/pabau
 JWT_SECRET=generated_test_key_riejhws90ifjew90fjweiop0fjweiop0-jfp0ioewjfw
