HF: ssri audit fix

--- a/package.json
+++ b/package.json
@@ -232,7 +232,8 @@
   },
   "resolutions": {
     "**/immer": "8.0.1",
-    "**/prismjs": "1.23.0"
+    "**/prismjs": "1.23.0",
+    "**/ssri": "8.0.1"
   },
   "husky": {
     "skipCI": true,
