PABAU2-39: auto deploy to rancher, forward auth header

--- a/apps/bridge-proxy/.meshrc.yml
+++ b/apps/bridge-proxy/.meshrc.yml
@@ -6,4 +6,6 @@ sources:
     handler:
       graphql:
         endpoint: ''
-        customFetch: ../../../fetcher.ts#default
+        customFetch: ../../../fetcher.js#default
+        operationHeaders:
+          Authorization: '{context.headers.authorization}'
