--- a/apps/bridge-proxy/tsconfig.json
+++ b/apps/bridge-proxy/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+
   },
   "extends": "../../tsconfig.base.json",
   "files": [],
