--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nx serve",
     "dev": "concurrently npm:start \"nx serve bridge-api\"",
     "dev:bridge-api": "nx serve bridge-api",
-    "hasura:export": "npx -p hasura-cli hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
+    "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "concurrently npm:ls-lint npm:test npm:lint npm:e2e",
@@ -68,6 +68,7 @@
     "cookie-session": "^1.4.0",
     "cross-env": "^7.0.3",
     "document-register-element": "1.14.10",
+    "env-cmd": "^10.1.0",
     "eslint-plugin-unicorn": "^28.0.2",
     "express-jwt": "^6.0.0",
     "file-loader": "^6.2.0",
