--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -52,7 +52,7 @@ pipelines:
             # TODO: move these to eslint so that `yarn lint` picks up these errors instead
             - npm i -g typescript
             - tsc --noEmit -p apps/backend/
-            - tsc --noEmit -p apps/connect/
+            # - tsc --noEmit -p apps/connect/
             - tsc --noEmit -p apps/connect-e2e/
             - tsc --noEmit -p apps/mgmt/
             - tsc --noEmit -p apps/mgmt-e2e/
@@ -97,7 +97,7 @@ pipelines:
               - tsc --noEmit -p apps/backend/
               - tsc --noEmit -p apps/bridge-api/
               - tsc --noEmit -p apps/bridge-proxy/
-              - tsc --noEmit -p apps/connect/
+              # - tsc --noEmit -p apps/connect/
               - tsc --noEmit -p apps/connect-e2e/
               - tsc --noEmit -p apps/mgmt/
               - tsc --noEmit -p apps/mgmt-e2e/
