--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -91,7 +91,10 @@ pipelines:
       - parallel:
         - step:
             name: type checks
+            caches:
+              - yarncustom
             script:
+              - NODE_OPTIONS=--max_old_space_size=4096 yarn install --frozen-lockfile --prefer-offline
               # TODO: move these to eslint so that `yarn lint` picks up these errors instead
               - npm i -g typescript
               - tsc --noEmit -p apps/backend/
