* introducing local hasura migration workflow * PDS now redirects to jwt header hostname * updated README.md - please read the 'Common' and 'Ticket workflow' sections in particular

--- a/apps/web/.env.SAMPLE
+++ b/apps/web/.env.SAMPLE
@@ -1,4 +1,5 @@
-# default url to bridge-api on windows
-# NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost:4000/graphql
-# DEFAULt url to hasura on windows
+# The "http" GraphQL endpoint
 NEXT_PUBLIC_GRAPHQL_ENDPOINT=http://localhost::8080/v1/graphql
+
+# The "ws" GraphQL endpoint
+NEXT_PUBLIC_WS_ENDPOINT='ws://localhost:8080/v1/graphql'
