--- a/hasura/docker-compose.windows.yml
+++ b/hasura/docker-compose.windows.yml
@@ -8,22 +8,23 @@ services:
     environment:
       POSTGRES_PASSWORD: postgrespassword
   graphql-engine:
-    image: hasura/graphql-engine:v2.0.0-alpha.7
+    image: hasura/graphql-engine:v2.0.0-alpha.8.cli-migrations-v3
     ports:
     - "8080:8080"
     depends_on:
-    - "postgres"
+      - postgres
     restart: always
+    env_file: .env
+    # extra_hosts:
+    #   - "host.docker.internal:172.17.0.1"
+    volumes:
+      - ./migrations/:/hasura-migrations/:ro
+      - ./metadata/:/hasura-metadata/:ro
+      - ./seeds/:/hasura-seeds/:ro
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
-      ## enable the console served by server
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
-      ## enable debugging mode. It is recommended to disable this in production
-      HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      ## uncomment next line to set an admin secret
-      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS512", "key": "SecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCodeSecretCode"}'
-      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: "public"
+      HASURA_GRAPHQL_UNAUTHORIZED_ROLE: "public" # only use this role so the whole unauthenticated world can query
 volumes:
   db_data:
