--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "vercel": "vercel",
     "apollo": "apollo",
     "nest": "cd apps/backend && nest",
-    "start": "nx serve",
-    "dev": "concurrently npm:start \"nx serve bridge-api --prod\"",
-    "dev:bridge-api": "nx serve bridge-api",
+    "web:start": "nx serve web",
+    "start:linux": "yarn dev:linux",
+    "start:windows": "yarn dev:windows",
+    "dev:linux": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:linux\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && curl http://localhost:4200 2>/dev/null\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "dev:windows": "concurrently --kill-others-on-fail -n \"HASURA,PRISMA,WEB,WEB-PRELOADER,LAUNCH BROWSER\" -c \"red,green,blue,grey,grey\" \"delay 10 && wait-on tcp:4000 && delay 15 && curl --connect-timeout 60 http://localhost:4000/graphql 2>/dev/null && yarn hasura:start:windows\" npm:bridge:start npm:web:start \"wait-on tcp:4200 && delay 2 && curl http://localhost:4200 2>/dev/null\" \"wait-on tcp:4200 && wait-on tcp:8080 && open-cli 'http://localhost:4200'\"",
+    "bridge:start": "nx serve bridge-api --prod",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up graphql-engine",
+    "hasura:start:windows": "docker-compose -f hasura/docker-compose.windows.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.windows.yml up graphql-engine",
+    "hasura:clean": "docker-compose -f hasura/docker-compose.linux.yml down -v",
     "hasura:export": "env-cmd -f ./hasura/.env npx -p hasura-cli@2.0.0-alpha.7 hasura --project hasura metadata export && apollo client:download-schema remote-schema.graphql && apollo client:download-schema graphql.schema.json",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
-    "pipeline-checks": "concurrently npm:ls-lint npm:test npm:lint npm:e2e",
-    "pipeline-checks:all": "concurrently --max-processes=1 --kill-others \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
+    "pipeline-checks": "concurrently --max-processes=1 --kill-others \"yarn nx affected --all --target=lint\" \"yarn nx affected --all --target=test\" \"yarn nx affected --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
+    "pipeline-checks:parallel": "concurrently --max-processes=1 --kill-others \"yarn nx affected --parallel --all --target=lint\" \"yarn nx affected --parallel --all --target=test\" \"yarn nx affected --parallel --all --target=build\" \"yarn nx affected --all --target=e2e\" ",
     "ls-lint": "ls-lint",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -37,7 +43,7 @@
     "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema",
     "bridge:generate": "prisma format && prisma generate && yarn pal g && yarn pal schema typescript -o apps/bridge-api/src/generated && yarn nexus:generate",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated",
-    "postinstall": "husky install && prisma generate"
+    "postinstall": "concurrently -n \"HUSKY,PRISMA\" -c \"grey,grey\" \"husky install\" \"prisma generate\""
   },
   "private": true,
   "dependencies": {
@@ -67,6 +73,7 @@
     "classnames": "^2.2.6",
     "cookie-session": "^1.4.0",
     "cross-env": "^7.0.3",
+    "delay-cli": "^1.1.0",
     "document-register-element": "1.14.10",
     "env-cmd": "^10.1.0",
     "eslint-plugin-unicorn": "^28.0.2",
@@ -96,6 +103,7 @@
     "nexus": "1.0.0",
     "nexus-plugin-prisma": "0.31.0",
     "node-fetch": "^2.6.1",
+    "open-cli": "^6.0.1",
     "preferred-locale": "^1.0.10",
     "r7insight_node": "^2.1.0",
     "rc-queue-anim": "^1.8.5",
@@ -130,6 +138,7 @@
     "ts-node-dev": "^1.1.6",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
+    "wait-on": "^5.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
